[project]
name = "tvbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeffrey04", email = "mycyberpet@yahoo.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "structlog>=24.4.0",
    "typer>=0.15.1",
    "uvloop>=0.21.0",
]

[project.scripts]
tvbox = "tvbox:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
